--- a/include/header.html
+++ b/include/header.html
@@ -1,6 +1,11 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="main.css">
+
+<meta charset="UTF-8">
+
+        <link rel="stylesheet" type="text/css" href="/main.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
+    <body>
+        <a href="/index.html">site home</a> &nbsp
