--- a/main.css
+++ b/main.css
@@ -1,8 +1,6 @@
 body {
-    background-color: #00003c;
-    color: #c7a200;
-    font-family: monospace;
-    font-size: 14;
+    background-color: #000000;
+    color: #ffffff;
 }
 
 a {
