updated schematic with labels

--- a/include/header.html
+++ b/include/header.html
@@ -8,4 +8,4 @@
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
     <body>
-        <a href="/index.html">site home</a> &nbsp
+        <a href="/index.html">site home</a> &nbsp;
